--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,9 @@ cover.html
 profile.cov
 .tmp.*
 
+*.code-workspace
 *.local
 b.sh
-
 
 ### Go template
 # Binaries for programs and plugins
@@ -64,7 +64,6 @@ b.sh
 .glide/
 
 .pid/
-
 
 devops
 main
